--- a/Views/Episodes/Create.cshtml
+++ b/Views/Episodes/Create.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Create</h2>
 
-<form asp-action="Create">
+<form asp-action="Create" id="createForm">
     <div class="form-horizontal">
         <h4>Episodes</h4>
         <hr />
@@ -56,22 +56,15 @@
         <div class="form-group">
             <label asp-for="HumorRating" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="HumorRating" class="form-control" />
+                <input asp-for="HumorRating" class="form-control" id="humorRating" />
                 <span asp-validation-for="HumorRating" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
             <label asp-for="StoryRating" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="StoryRating" class="form-control" />
+                <input asp-for="StoryRating" class="form-control" id="storyRating" />
                 <span asp-validation-for="StoryRating" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="OverallGrade" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="OverallGrade" class="form-control" />
-                <span asp-validation-for="OverallGrade" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
@@ -85,6 +78,14 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
+<script type="text/javascript">
+    function calculate() {
+        var humor = document.getElementById("humorRating").value;
+        var story = document.getElementById('storyRating').value;
+        var sum = parseInt(humor) + parseInt(story);
+        console.log(sum);
+    }
+</script>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
