--- a/Views/Shows/Delete.cshtml
+++ b/Views/Shows/Delete.cshtml
@@ -4,13 +4,13 @@
     ViewData["Title"] = "Delete";
 }
 
-<h2>Delete</h2>
+<h2 class="yellowFont">Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3 class="yellowFont">Are you sure you want to delete this?</h3>
 <div>
-    <h4>Show</h4>
+    <h4 class="yellowFont">Show</h4>
     <hr />
-    <dl class="dl-horizontal">
+    <dl class="dl-horizontal yellowFont">
         <input type="hidden" asp-for="ID" />
         <dt>
             @Html.DisplayNameFor(model => model.Title)
@@ -34,8 +34,8 @@
     
     <form asp-action="Delete">
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            <a asp-action="Index">Back to List</a>
+            <input type="submit" value="Delete" class="btn btn-default" /> <span class="yellowFont">|</span>
+            <a asp-action="Index" class="btn btn-default">Back to List</a>
         </div>
     </form>
 </div>
