--- a/Views/Shows/Details.cshtml
+++ b/Views/Shows/Details.cshtml
@@ -4,12 +4,12 @@
     ViewData["Title"] = "Details";
 }
 
-<h2>Details</h2>
+<h2 class="yellowFont">Details</h2>
 
 <div>
-    <h4>Show</h4>
+    <h4 class="yellowFont">Show</h4>
     <hr />
-    <dl class="dl-horizontal">
+    <dl class="dl-horizontal yellowFont">
         <dt>
             @Html.DisplayNameFor(model => model.Title)
         </dt>
@@ -23,6 +23,12 @@
             @Html.DisplayFor(model => model.Genre)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.Description)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Description)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.Rating)
         </dt>
         <dd>
@@ -30,7 +36,7 @@
         </dd>
     </dl>
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.ID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+<div style="margin-left: 105px; margin-top: 35px;">
+    <a asp-action="Index" class="btn btn-info">Back to List </a> |
+    <a asp-action="Edit" asp-route-id="@Model.ID" class="btn btn-info">Edit</a> 
 </div>
