Fixed overall score calc and cleaned up styling

--- a/Views/Episodes/Delete.cshtml
+++ b/Views/Episodes/Delete.cshtml
@@ -4,13 +4,12 @@
     ViewData["Title"] = "Delete";
 }
 
-<h2>Delete</h2>
+<h2 class="yellowFont">Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3 class="yellowFont">Are you sure you want to delete @Model.ShowName episode, @Model.EpisodeName?</h3>
 <div>
-    <h4>Episodes</h4>
     <hr />
-    <dl class="dl-horizontal">
+    <dl class="dl-horizontal yellowFont">
         <input type="hidden" asp-for="ID" />
         <dt>
             @Html.DisplayNameFor(model => model.ShowName)
@@ -68,10 +67,10 @@
         </dd>
     </dl>
     
-    <form asp-action="Delete">
+    <form asp-action="Delete" style="margin-left: 60px; margin-top: 40px;">
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            <a asp-action="Index">Back to List</a>
+            <input type="submit" value="Delete" class="btn btn-danger" /> |
+            <a asp-action="Index" class="btn btn-default yellowBG">Back to List</a>
         </div>
     </form>
 </div>
