--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -1,7 +1,11 @@
 ﻿@{
     ViewData["Title"] = "About";
 }
-<h2>@ViewData["Title"].</h2>
-<h3>@ViewData["Message"]</h3>
+<h2 class="yellowFont" style="font-weight: bold;">@ViewData["Title"]</h2><br/>
 
-<p>Use this area to provide additional information.</p>
+<p class="yellowFont">Overripe Bananas is a personal project from Matt Hyman, a C# / ASP.NET Core developer out of Denver, CO.</p><br />
+<p class="yellowFont">This application is intended to be your companion when watching your favorite TV shows. Have you ever found yourself browsing
+    through a show's vast selection of episodes and just didn't know which one to watch? Use Overripe Bananas to find the most interesting, the funniest, the
+    scariest or the most intriguing episodes.</p><br />
+<p class="yellowFont">Can't find a show or an episode? You can add a review yourself with ease! Keep adding reviews to benefit not only your own watching
+    but also others!</p>
