--- a/Views/Episodes/Create.cshtml
+++ b/Views/Episodes/Create.cshtml
@@ -52,7 +52,7 @@
         <div class="form-group">
             <label asp-for="BestCharacter" class="col-md-2 control-label yellowFont"></label>
             <div class="col-md-10">
-                <input asp-for="BestCharacter" class="form-control yellowFont" />
+                <input asp-for="BestCharacter" class="form-control" />
                 <span asp-validation-for="BestCharacter" class="text-danger"></span>
             </div>
         </div>
@@ -72,14 +72,14 @@
         </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default yellowBG" />
+                <input type="submit" value="Create" class="btn btn-success" />
             </div>
         </div>
     </div>
 </form>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" class="btn btn-default yellowBG">Back to List</a>
 </div>
 <script type="text/javascript">
     function calculate() {
