--- a/Views/Shows/Create.cshtml
+++ b/Views/Shows/Create.cshtml
@@ -4,36 +4,36 @@
     ViewData["Title"] = "Create";
 }
 
-<h2>Create</h2>
+<h2 class="yellowFont">Create</h2>
 
-<form asp-action="Create">
+<form asp-action="Create" class="yellowFont">
     <div class="form-horizontal">
         <h4>Show</h4>
         <hr />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group">
-            <label asp-for="Title" class="col-md-2 control-label"></label>
+            <label asp-for="Title" class="col-md-2 control-label yellowFont"></label>
             <div class="col-md-10">
                 <input asp-for="Title" class="form-control" />
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="Genre" class="col-md-2 control-label"></label>
+            <label asp-for="Genre" class="col-md-2 control-label yellowFont"></label>
             <div class="col-md-10">
                 <input asp-for="Genre" class="form-control" />
                 <span asp-validation-for="Genre" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="Description" class="col-md-2 control-label"></label>
+            <label asp-for="Description" class="col-md-2 control-label yellowFont"></label>
             <div class="col-md-10">
                 <textarea asp-for="Description" class="form-control"></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="Rating" class="col-md-2 control-label"></label>
+            <label asp-for="Rating" class="col-md-2 control-label yellowFont"></label>
             <div class="col-md-10">
                 <input asp-for="Rating" class="form-control" />
                 <span asp-validation-for="Rating" class="text-danger"></span>
@@ -48,7 +48,7 @@
 </form>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" class="btn btn-default yellowBG">Back to List</a>
 </div>
 
 @section Scripts {
