--- a/Views/Shows/Delete.cshtml
+++ b/Views/Shows/Delete.cshtml
@@ -6,9 +6,8 @@
 
 <h2 class="yellowFont">Delete</h2>
 
-<h3 class="yellowFont">Are you sure you want to delete this?</h3>
+<h3 class="yellowFont">Are you sure you want to delete @Model.Title?</h3>
 <div>
-    <h4 class="yellowFont">Show</h4>
     <hr />
     <dl class="dl-horizontal yellowFont">
         <input type="hidden" asp-for="ID" />
@@ -32,10 +31,10 @@
         </dd>
     </dl>
     
-    <form asp-action="Delete">
+    <form asp-action="Delete" style="margin-left: 100px; margin-top: 40px;">
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> <span class="yellowFont">|</span>
-            <a asp-action="Index" class="btn btn-default">Back to List</a>
+            <input type="submit" value="Delete" class="btn btn-danger" /> <span class="yellowFont">|</span>
+            <a asp-action="Index" class="btn btn-default yellowBG">Back to List</a>
         </div>
     </form>
 </div>
